- Start creating create poll page

--- a/SceytChatUiKit/src/main/AndroidManifest.xml
+++ b/SceytChatUiKit/src/main/AndroidManifest.xml
@@ -29,6 +29,11 @@
             android:theme="@style/DefaultFontTheme"
             android:windowSoftInputMode="adjustResize" />
         <activity
+            android:name=".presentation.components.create_poll.CreatePollActivity"
+            android:exported="false"
+            android:theme="@style/DefaultFontTheme"
+            android:windowSoftInputMode="adjustResize" />
+        <activity
             android:name=".presentation.components.channel_info.ChannelInfoActivity"
             android:exported="false"
             android:theme="@style/DefaultFontTheme"
