- Start implementation Poll message type

--- a/examples/SceytDemoApp/src/main/AndroidManifest.xml
+++ b/examples/SceytDemoApp/src/main/AndroidManifest.xml
@@ -66,6 +66,11 @@
             android:windowSoftInputMode="adjustResize" />
 
         <activity
+            android:name=".presentation.PollExamplesActivity"
+            android:theme="@style/SceytAppTheme.Default"
+            android:windowSoftInputMode="adjustResize" />
+
+        <activity
             android:name=".presentation.welcome.WelcomeActivity"
             android:exported="true"
             android:theme="@style/SceytAppTheme.Default"
