--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -34,7 +34,7 @@ photoview = "2.3.0"
 recyclerview = "1.4.0"
 robolectric = "4.16"
 room = "2.8.3"
-sceytChatAndroidSdk = "1.8.2-SNAPSHOT"
+sceytChatAndroidSdk = "1.9.0"
 sdpAndroid = "1.1.1"
 sspAndroid = "1.1.1"
 truth = "1.4.5"
