--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,14 +9,13 @@ coreZxing = "3.5.4"
 emoji2Bundled = "1.6.0"
 emojiGoogle = "0.23.0"
 espressoCore = "3.7.0"
-firebaseBom = "34.6.0"
+firebaseBom = "34.7.0"
 firebaseMessagingKtx = "24.1.2"
 flexbox = "3.0.0"
 fragmentKtx = "1.8.9"
 glide = "5.0.5"
 glideTransformations = "4.3.0"
 gson = "2.13.2"
-jsoup = "1.21.2"
 junit = "4.13.2"
 junitKtx = "1.3.0"
 koinAndroid = "3.5.6"
@@ -29,6 +28,8 @@ media3Exoplayer = "1.8.0"
 mockitoCore = "5.20.0"
 mockitoInline = "5.2.0"
 mockitoKotlin = "6.1.0"
+moshi = "1.15.2"
+moshiKotlin = "1.15.2"
 okhttp = "5.3.2"
 photoview = "2.3.0"
 recyclerview = "1.4.0"
@@ -67,7 +68,6 @@ fragment-ktx = { module = "androidx.fragment:fragment-ktx", version.ref = "fragm
 glide = { module = "com.github.bumptech.glide:glide", version.ref = "glide" }
 glide-transformations = { module = "jp.wasabeef:glide-transformations", version.ref = "glideTransformations" }
 gson = { module = "com.google.code.gson:gson", version.ref = "gson" }
-jsoup = { module = "org.jsoup:jsoup", version.ref = "jsoup" }
 junit = { module = "junit:junit", version.ref = "junit" }
 junit-ktx = { module = "androidx.test.ext:junit-ktx", version.ref = "junitKtx" }
 koin-android = { module = "io.insert-koin:koin-android", version.ref = "koinAndroid" }
@@ -84,6 +84,8 @@ media3-ui = { module = "androidx.media3:media3-ui", version.ref = "media3Exoplay
 mockito-core = { module = "org.mockito:mockito-core", version.ref = "mockitoCore" }
 mockito-inline = { module = "org.mockito:mockito-inline", version.ref = "mockitoInline" }
 mockito-kotlin = { module = "org.mockito.kotlin:mockito-kotlin", version.ref = "mockitoKotlin" }
+moshi-kotlin = { module = "com.squareup.moshi:moshi-kotlin", version.ref = "moshiKotlin" }
+moshi = { module = "com.squareup.moshi:moshi", version.ref = "moshi" }
 okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
 photo-view = { module = "com.github.chrisbanes:PhotoView", version.ref = "photoview" }
 recyclerview = { module = "androidx.recyclerview:recyclerview", version.ref = "recyclerview" }
