add view once preview

--- a/SceytChatUiKit/src/main/AndroidManifest.xml
+++ b/SceytChatUiKit/src/main/AndroidManifest.xml
@@ -52,6 +52,10 @@
             android:name=".presentation.components.channel_info.preview.ImagePreviewActivity"
             android:theme="@style/DefaultFontTheme" />
         <activity
+            android:name=".presentation.components.channel.messages.preview.SelfDestructingMediaPreviewActivity"
+            android:configChanges="orientation|screenSize|screenLayout|keyboardHidden"
+            android:theme="@style/SceytPreviewThemeDark" />
+        <activity
             android:name=".presentation.components.role.ChangeRoleActivity"
             android:exported="false"
             android:theme="@style/DefaultFontTheme" />
