--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -20,11 +20,11 @@ junit = "4.13.2"
 junitKtx = "1.3.0"
 koinAndroid = "3.5.6"
 kotlinxCoroutinesTest = "1.10.2"
-libphonenumber = "9.0.20"
+libphonenumber = "9.0.21"
 lifecycleRuntimeKtx = "2.10.0"
 lottie = "6.7.1"
 material = "1.13.0"
-media3Exoplayer = "1.8.0"
+media3Exoplayer = "1.9.0"
 mockitoCore = "5.21.0"
 mockitoInline = "5.2.0"
 mockitoKotlin = "6.1.0"
@@ -45,7 +45,7 @@ workRuntimeKtx = "2.11.0"
 lifecycleProcess = "2.10.0"
 google-services = "4.4.4"
 firebase-crashlytics = "3.0.6"
-ksp = "2.2.20-2.0.3"
+ksp = "2.3.2"
 documentfile = "1.1.0"
 
 [libraries]
