--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -35,7 +35,7 @@ photoview = "2.3.0"
 recyclerview = "1.4.0"
 robolectric = "4.16"
 room = "2.8.4"
-sceytChatAndroidSdk = "1.9.3"
+sceytChatAndroidSdk = "1.9.301-SNAPSHOT"
 sdpAndroid = "1.1.1"
 sspAndroid = "1.1.1"
 truth = "1.4.5"
